OBPIH-6197 Final draft of installation instructions